<resources>
    <string name="app_name">Pendeteksi Gaya Belajar</string>
    <string name="welcome">Welcome!</string>
    <string name="timer45">00.45</string>
    <string name="txtlogin1">First, you must login.</string>
    <string name="txtlogin2">Login</string>
    <string name="txtlogin3">Username</string>
    <string name="txtlogin4">Password</string>
    <string name="txtlogin5">LOGIN</string>
    <string name="loginfail1">We\'re sorry!</string>
    <string name="loginfail2">Your login was\'t successfull :(</string>
    <string name="loginfail3">please re-login</string>
    <string name="start1">Test Index of Learning Style!</string>
    <string name="start2">Are you ready to do the index of Learning Style test?</string>
    <string name="start3">When you\'re ready, lets get started!</string>
    <string name="start4">START</string>
    <string name="admin1">Hello Admin!</string>
    <string name="admin2">Any data you want to check?</string>
    <string name="admin3">Data Soal Test \nIndex of Learning Style</string>
    <string name="admin4">Data Hasil Test \nIndex of Learning Style</string>
    <string name="admin5">LOGOUT</string>
    <string name="datasoal1">Data Soal Text Index\nof Learning Style!</string>
    <string name="datahasil1">Result Data Text\nIndex of Learning Style!</string>
    <string name="datapertanyaan">Question Data Test\nIndex of Learning Style!</string>
    <string name="datasoal2">Tambah</string>
    <string name="datasoal3">Ubah</string>
    <string name="datasoal4">Hapus</string>
    <string name="datasoal5">Back</string>
    <string name="pertanyaan1">1. Saya memahami sesuatu dengan lebih baik setelah saya ...</string>
    <string name="jawab1_1">Mencobanya</string>
    <string name="jawab1_2">Berpikir secara teliti</string>
    <string name="pertanyaan2">2. Saya cenderung dipandang sebagai orang yang ...</string>
    <string name="jawab2_1">Realistis</string>
    <string name="jawab2_2">Kreatif</string>
    <string name="pertanyaan3">3. Ketika saya memikirkan tentang apa yang saya lakukan kemarin, saya cenderung mendapatkannya dalam bentuk ...</string>
    <string name="jawab3_1">Gambar</string>
    <string name="jawab3_2">Kata-kata</string>
    <string name="pertanyaan4">4. Saya cenderung untuk ...</string>
    <string name="jawab4_1">Memahami secara detail, tetapi kurang memahami keseluruhan</string>
    <string name="jawab4_2">Memahami keseluruhan, tetapi kurang memahami secara detail</string>
    <string name="pertanyaan5">5. Ketika belajar suatu yang baru, hal tersebut membantu saya untuk ...</string>
    <string name="jawab5_1">Berbicara tentang hal itu</string>
    <string name="jawab5_2">Berpikir tentang hal itu</string>
    <string name="pertanyaan6">6. Jika saya menjadi dosen, saya lebih suka mengajarkan mata kuliah ...</string>
    <string name="jawab6_1">Yang berhubungan dengan fakta dan situasi kehidupan nyata</string>
    <string name="jawab6_2">Yang berhubungan dengan ide-ide dan teori</string>
    <string name="pertanyaan7">7. Saya lebih suka mendapatkan informasi baru dalam bentuk ...</string>
    <string name="jawab7_1">Gambar, diagram, grafik, atau peta</string>
    <string name="jawab7_2">Petunjuk tertulis atau informasi berupa kalimat</string>
    <string name="pertanyaan8">8. Sekali saya memahami ...</string>
    <string name="jawab8_1">Bagian-bagian/detail dari suatu hal, maka saya dapat memahami keseluruhan</string>
    <string name="jawab8_2">Secara keseluruhan, maka saya dapat memahami bagianbagian/detail dari suatu hal</string>
    <string name="pertanyaan9">9. Ketika kelompok belajar menghadapi materi yang sulit saya cenderung ...</string>
    <string name="jawab9_1">Segera mengajukan ide-ide</string>
    <string name="jawab9_2">Duduk dan mendengarkan dulu</string>
    <string name="pertanyaan10">10. Saya merasa lebih mudah dalam ...</string>
    <string name="jawab10_1">Mempelajari fakta-fakta</string>
    <string name="jawab10_2">Mempelajari konsep-konsep</string>
    <string name="pertanyaan11">11. Ketika membaca sebuah gambar dan grafik saya cenderung ...</string>
    <string name="jawab11_1">Memperhatikan gambar-gambar dan grafik dengan seksama</string>
    <string name="jawab11_2">Memfokuskan perhatian pada teks tertulis</string>
    <string name="pertanyaan12">12. Ketika menyelesaikan soal matematika ...</string>
    <string name="jawab12_1">Saya biasanya menggunakan cara saya sendiri untuk memecahkan soal tersebut langkah demi langkah</string>
    <string name="jawab12_2">Saya sering melihat penyelesaian soal matematika tersebut kemudian berusaha memahami langkah-langkah untuk mendapatkan jawaban tersebut</string>
    <string name="pertanyaan13">13. Di kelas yang saya ikuti ...</string>
    <string name="jawab13_1">Saya selalu mengenal sebagian besar mahasiswa</string>
    <string name="jawab13_2">Saya jarang mengenal Sebagian besar mahasiswa</string>
    <string name="pertanyaan14">14. Dalam membaca buku non fiksi (tulisan berdasarkan data atau fakta), saya lebih suka ...</string>
    <string name="jawab14_1">Sesuatu yang mengajarkan saya fakta-fakta baru atau menjelaskan tentang bagaimana melakukan sesuatu</string>
    <string name="jawab14_2">Sesuatu yang memberi saya ide-ide baru untuk dipikirkan</string>
    <string name="pertanyaan15">15. Saya menyukai dosen-dosen yang</string>
    <string name="jawab15_1">Menggunakan banyak gambaran untuk menjelaskan materinya</string>
    <string name="jawab15_2">Menggunakan banyak kalimat untuk menjelaskan materinya</string>
    <string name="pertanyaan16">16. Ketika saya menganalisa cerita atau novel</string>
    <string name="jawab16_1">Saya memikirkan tentang konfliknya dan mencoba untuk menempatkan mereka bersama-sama untuk mencari tahu tema dari novel tersebut</string>
    <string name="jawab16_2">Saya hanya perlu tahu apa temanya ketika saya selesai membaca harus kembali dan mencari konflik-konflik yang terlihat</string>
    <string name="pertanyaan17">17. Ketika saya memulai masalah pekerjaan rumah, saya lebih cenderung</string>
    <string name="jawab17_1">Langsung berpikir pada penyelesaian masalah</string>
    <string name="jawab17_2">Mencoba untuk memahami terlebih dahulu permasalahan dengan baik</string>
    <string name="pertanyaan18">18. Saya lebih suka pemahaman secara</string>
    <string name="jawab18_1">Pasti</string>
    <string name="jawab18_2">Teori</string>
    <string name="pertanyaan19">19. Saya dapat mengingat dengan baik</string>
    <string name="jawab19_1">Hal-hal yang saya lihat</string>
    <string name="jawab19_2">Hal-hal yang saya dengar</string>
    <string name="pertanyaan20">20. Bagi saya hal penting yang harus dilakukan seorang dosen adalah</string>
    <string name="jawab20_1">Menyampaikan materi dengan menggunakan langkah-langkah yang berurutan secara jelas</string>
    <string name="jawab20_2">Memberikan gambaran keseluruhan, kemudian menghubungkan materi satu dengan yang lain</string>
    <string name="pertanyaan21">21. Saya lebih suka untuk belajar</string>
    <string name="jawab21_1">Dalam kelompok</string>
    <string name="jawab21_2">Sendiri</string>
    <string name="pertanyaan22">22. Dalam bekerja, saya cenderung</string>
    <string name="jawab22_1">Berhati-hati terhadap detail dari pekerjaan saya</string>
    <string name="jawab22_2">Kreatif dalam mengerjakan pekerjaan saya</string>
    <string name="pertanyaan23">23. Untuk memahami arah suatu tempat, saya lebih suka menggunakan</string>
    <string name="jawab23_1">Peta</string>
    <string name="jawab23_2">Petunjuk tertulis</string>
    <string name="pertanyaan24">24. Saya belajar secara</string>
    <string name="jawab24_1">Teratur. Jika saya tekun, maka saya akan mendapatkan yang saya inginkan</string>
    <string name="jawab24_2">Tidak teratur. Pertama-tama saya tidak paham, namun kemudian tiba-tiba semua terasa paham</string>
    <string name="pertanyaan25">25. Ketika mengerjakan suatu tugas, terlebih dahulu saya akan</string>
    <string name="jawab25_1">Mencoba langsung mengerjakan tugas tersebut</string>
    <string name="jawab25_2">Memikirkan terlebih dahulu bagaimana saya akan mengerjakan tugas tersebut</string>
    <string name="pertanyaan26">26. Saya menikmati bacaan yang ditulis oleh penulis yang</string>
    <string name="jawab26_1">Secara jelas dan langsung mengungkapkan apa yang dimaksud</string>
    <string name="jawab26_2">Mengungkapkan hal-hal yang mereka sampaikan secara kreatif dan menarik</string>
    <string name="pertanyaan27">27. Ketika melihat diagram atau sketsa di kelas, saya paling mudah untuk mengingat</string>
    <string name="jawab27_1">Gambarnya</string>
    <string name="jawab27_2">Apa yang dikatakan oleh dosen mengenai hal itu</string>
    <string name="pertanyaan28">28. Ketika mempertimbangkan isi suatu informasi, saya cenderung untuk</string>
    <string name="jawab28_1">Berfokus pada detail dan melewatkan gambaran keseluruhannya</string>
    <string name="jawab28_2">Memperhatikan gambaran keseluruhan sebelum masuk ke detail</string>
    <string name="pertanyaan29">29. Saya lebih mudah mengingat</string>
    <string name="jawab29_1">Sesuatu yang telah saya lakukan</string>
    <string name="jawab29_2">Sesuatu yang telah banyak saya pikirkan</string>
    <string name="pertanyaan30">30. Ketika Saya mengerjakan tugas, saya lebih memilih untuk</string>
    <string name="jawab30_1">Menguasai salah satu cara untuk megerjakannya</string>
    <string name="jawab30_2">Mencoba cara-cara baru untuk mengerjakan tugas tersebut</string>
    <string name="pertanyaan31">31. Ketika seseorang menunjukkan kepada saya suatu informasi, saya lebih suka</string>
    <string name="jawab31_1">Diagram atau grafik</string>
    <string name="jawab31_2">Tulisan yang meringkas hasil tersebut</string>
    <string name="pertanyaan32">32. Ketika menulis sebuah karangan, saya lebih cenderung untuk</string>
    <string name="jawab32_1">Mengerjakan karangan tersebut secara berurutan dari awal sampai akhir</string>
    <string name="jawab32_2">Mengerjakan karangan tersebut secara acak baru kemudian mengurutkannya</string>
    <string name="pertanyaan33">33. Ketika mengerjakan tugas kelompok, hal pertama yang ingin saya lakukan adalah</string>
    <string name="jawab33_1">Mendengarkan gagasan setiap orang dalam kelompok</string>
    <string name="jawab33_2">Mencari gagasan secara individual, kemudian membandingkan dalam kelompok</string>
    <string name="pertanyaan34">34. Saya menganggapnya sebagai pujian yang tinggi ketika memanggil seseorang secara</string>
    <string name="jawab34_1">Masuk akal</string>
    <string name="jawab34_2">Imajinatif</string>
    <string name="pertanyaan35">35. Ketika bertemu orang-orang di sebuah pesta, saya lebih cenderung</string>
    <string name="jawab35_1">Penampilan mereka</string>
    <string name="jawab35_2">Apa yang mereka katakan tentang dirinya</string>
    <string name="pertanyaan36">36. Ketika saya belajar materi baru, saya lebih suka</string>
    <string name="jawab36_1">Fokus pada materi tersebut</string>
    <string name="jawab36_2">Mengaitkan materi tersebut dengan materi lain yang sesuai</string>
    <string name="pertanyaan37">37. Saya lebih cenderung dianggap sebagai orang yang</string>
    <string name="jawab37_1">Mudah begaul</string>
    <string name="jawab37_2">Pendiam, tertutup</string>
    <string name="pertanyaan38">38. Saya lebih suka mata kuliah yang menekankan pada</string>
    <string name="jawab38_1">Materi nyata (fakta dan data)</string>
    <string name="jawab38_2">Materi abstrak (konsep dan teori)</string>
    <string name="pertanyaan39">39. Untuk hiburan, saya lebih menyukai</string>
    <string name="jawab39_1">Menonton televisi</string>
    <string name="jawab39_2">Membaca buku</string>
    <string name="pertanyaan40">40. Beberapa dosen memulai mata kuliah dengan garis besar materi yang akan dicakup. Garis besar materi tersebut</string>
</resources>